// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeListItem /> should correctly render recipe 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    className="mr1"
    onClick={[Function]}
  >
    🔲
  </span>
  <span>
    Test recipe
  </span>
  <span>
    Test category
  </span>
</li>
`;

exports[`<RecipeListItem /> should not break if no recipe passed 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    className="mr1"
    onClick={[Function]}
  >
    🔲
  </span>
  <span />
  <span />
</li>
`;

exports[`<RecipeListItem /> should render favorited state 1`] = `
<li
  className="py2 border-bottom border-bottom-dashed pointer"
  onClick={[Function]}
>
  <span
    className="mr1"
    onClick={[Function]}
  >
    ✅
  </span>
  <span>
    Test recipe
  </span>
  <span>
    Test category
  </span>
</li>
`;
